@@ -7,13 +7,8 @@ import net.minecraft.item.ItemStack;
 
 public class SlotPortableCraftingResult extends SlotCrafting {
 
-    private EntityPlayer player;
-    private InventoryPortableCrafting craftingMatrix;
-
     public SlotPortableCraftingResult(EntityPlayer player, InventoryPortableCrafting craftingMatrix, IInventory result, int slotIndex, int xPos, int yPos) {
         super(player, craftingMatrix, result, slotIndex, xPos, yPos);
-        this.player = player;
-        this.craftingMatrix = craftingMatrix;
     }
 
     @Override
